# Stardawn

./: Cargo.toml  README.md
assets/images/interface/main_menu/: shadow.png~
src/: main.rs
src/interface/: main_menu.rs  mod.rs  style.rs
