[package]
name = "stardawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/idedary/bevy", features = ["dynamic_linking"] }
#bevy_lunex = { git = "https://github.com/bytestring-net/bevy-lunex", branch = "main" }
bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy-lunex" }